[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/dialog_interface_theme.tres" type="Theme" id=2]
[ext_resource path="res://features/dialog_system/dialog_interface.gd" type="Script" id=3]
[ext_resource path="res://features/dialog_system/answer_button.tscn" type="PackedScene" id=4]

[node name="DialogInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="DialogPanel" type="Panel" parent="."]
anchor_top = 0.7
anchor_right = 0.632
anchor_bottom = 1.0

[node name="Label" type="RichTextLabel" parent="DialogPanel"]
anchor_left = 0.04
anchor_top = 0.299
anchor_right = 0.96
anchor_bottom = 0.9
text = "This is a test. I don't like you."

[node name="NamePanel" type="Panel" parent="."]
anchor_top = 0.706
anchor_right = 0.258
anchor_bottom = 0.774

[node name="Name" type="Label" parent="NamePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Rose"
align = 1
valign = 1

[node name="Answers" type="VBoxContainer" parent="."]
anchor_left = 0.651
anchor_top = 0.311
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="Answer1" parent="Answers" instance=ExtResource( 4 )]

[node name="Answer2" parent="Answers" instance=ExtResource( 4 )]
margin_top = 135.0
margin_bottom = 250.0

[node name="Answer3" parent="Answers" instance=ExtResource( 4 )]
margin_top = 270.0
margin_bottom = 385.0

[node name="ContinueBox" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.651
anchor_top = 0.701
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20

[node name="Continue" type="Button" parent="ContinueBox"]
margin_right = 343.0
margin_bottom = 167.0
size_flags_vertical = 3
text = "Continue..."

[connection signal="pressed" from="ContinueBox/Continue" to="." method="_on_Continue_pressed"]
